# toast

./: .~lock.Design Document.odt#  .~lock.project_document.odt#  Design Document.odt  es2015.core.ts  project_document.docx  project_document.odt  ~$sign Document.odt  ~WRL0005.tmp
compiler/: Cargo.toml  foo.bc  foo.ll  std.js
compiler/.cargo/: config.toml
compiler/assets/: tsconfig.toml
compiler/src/: dependencies.rs  error.rs  main.rs  parser.rs  test.rs
compiler/src/common/: cached_string.rs  mod.rs  nohasher.rs
compiler/src/compiler/: mod.rs
compiler/src/compiler/cranelift/: mod.rs
compiler/src/compiler/cranelift/runtime/: mod.rs
compiler/src/compiler/llvm/: async_function.rs  basic_function.rs  bin.rs  builder.rs  call.rs  compiler.rs  conditional.rs  loops.rs  mod.rs  object.rs
compiler/src/ir_builder/: assignment.rs  class.rs  context.rs  function.rs  function_builder.rs  ir.rs  ir_module.rs  mod.rs  regex.rs
compiler/src/ir_optimiser/: dce.rs  inlining.rs  mod.rs
compiler/tests/: import.ts  index.ts
libobject/: Cargo.toml
libobject/src/: lib.rs  typeinfo.rs
mlir/src/: blocks.rs  lib.rs  ops.rs  types.rs
native-js-common/: Cargo.toml
native-js-common/src/: error.rs  ident.rs  lazy.rs  lib.rs  source.rs
native-ts-ast/: Cargo.toml
native-ts-ast/src/: expr.rs  lexer.rs  lib.rs  stmt.rs  ty.rs  utils.rs
native-ts-cli/: Cargo.toml
native-ts-cli/examples/: example.rs
native-ts-cli/src/: lib.rs
native-ts-common/: Cargo.toml
native-ts-common/src/: fxhash.rs  lib.rs  rc.rs
native-ts-gc/: Cargo.toml
native-ts-gc/src/: cell.rs  channel.rs  heap.rs  lib.rs  thread.rs
native-ts-hir/: Cargo.toml  bb.js  binary.ts  node.txt  std.d.ts  std.ts  uri.ts
native-ts-hir-mir/: Cargo.toml
native-ts-hir-mir/src/: lib.rs
native-ts-hir-to-mir/: Cargo.toml
native-ts-hir-to-mir/src/: lib.rs
native-ts-hir/src/: common.rs  context.rs  error.rs  lib.rs  symbol_table.rs  test.ts  util.rs
native-ts-hir/src/ast/: expr.rs  format.rs  function.rs  mod.rs  stmts.rs  strict_typed.rs  types.rs  visit.rs
native-ts-hir/src/ast_to_hir/: context.rs  hoist.rs  mod.rs  module.rs  properties.rs
native-ts-hir/src/ast_to_hir/expr/: array.rs  arrow.rs  assign.rs  await.rs  bin.rs  call.rs  class.rs  cond.rs  function.rs  instantiation.rs  lit.rs  member.rs  mod.rs  new.rs  object_literal.rs  optchain.rs  super_prop.rs  tpl.rs  unary.rs  update.rs
native-ts-hir/src/ast_to_hir/stmt/: do_while.rs  for_in_loop.rs  for_of_loop.rs  mod.rs
native-ts-hir/src/ast_to_hir/types/: class.rs  generic.rs  hoist.rs  mod.rs  properties.rs
native-ts-hir/src/ast_transform/: class.rs  expr.rs  function.rs  mod.rs  module.rs  stmt.rs  types.rs
native-ts-hir/src/checks/: mod.rs  var_init.rs
native-ts-hir/src/hir/: expr.rs  format.rs  function.rs  generic.rs  mod.rs  stmts.rs  strict_typed.rs  types.rs  visit.rs
native-ts-hir/src/interpreter/: mod.rs
native-ts-hir/src/passes/: alias_resolver.rs  class_constructor.rs  class_defult_initialiser.rs  generic_class_resolver.rs  generic_function_resolver.rs  generic_interface_resolver.rs  mod.rs  type_check.rs  type_normaliser.rs  unknown.rs
native-ts-hir/src/transform/: class.rs  context.rs  expr.rs  function.rs  mod.rs  module.rs  stmt.rs  types.rs
native-ts-hir/src/type_resolver/: alias.rs  mod.rs
native-ts-hir/src/typed_hir/: mod.rs
native-ts-hir/src/untyped_hir/: expr.rs  mod.rs  stmt.rs  type_def.rs  types.rs  visit.rs
native-ts-hir/tests/: binary_search.rs  class.rs  language.rs  loop_transforms.rs  search.rs  simple.rs  simple_hash.rs  sort.rs  try_trhow.rs  using_decl.rs
native-ts-hir/tests/common/: assert.ts  mod.rs
native-ts-mir/: Cargo.toml
native-ts-mir/src/: builder.rs  context.rs  function.rs  lib.rs  mir.rs  runtime.rs  util.rs  value.rs
native-ts-mir/src/backend/: mod.rs
native-ts-mir/src/backend/llvm/: mod.rs
native-ts-mir/src/passes/: async_transform.rs  mod.rs
native-ts-mir/src/types/: aggregate.rs  mod.rs
native-ts-parser/: Cargo.toml
native-ts-parser/src/: config.rs  lib.rs
native-ts-runtime/: Cargo.toml  runtime.d.ts
native-ts-runtime/src/: coro.rs  event_loop.rs  global_allocator.rs  lib.rs  rt.rs  runtime.rs  types.rs
native-ts-runtime/src/asynchronous/: executor.rs  mod.rs  task.rs
native-ts-runtime/src/exception/: mod.rs
native-ts-runtime/src/gc/: mod.rs
native-ts-runtime/src/types/: async_function.rs  bigint.rs  regex.rs
native-ts-runtime/src/unwinding/: mod.rs  panic.rs  panicking.rs
regex-ecma/: Cargo.toml
regex-ecma/src/: ast.rs  clousure.rs  compiler.rs  ir.rs  lib.rs  mir.rs  optimise.rs  parser.rs  pest_parser.rs  regex.pest
regex-ecma/tests/: parser.rs
runtime/: Cargo.toml  build.rs  c_api.c
runtime/src/: allocator.rs  bdwgc.rs  coro.rs  gc.rs  lib.rs  minicoro.rs  rt.rs  runtime.rs  utils.rs
runtime/src/asynchronous/: mod.rs
runtime/src/ecma/: mod.rs
runtime/src/types/: async_function.rs  async_generator.rs  bigint.rs  function.rs  generator.rs  mod.rs  object.rs  object_map.rs  promise.rs  regex.rs  string.rs  symbol.rs
runtime/src/unwinding/: mod.rs  personality.rs
rusty-ts-macro/: Cargo.toml
rusty-ts-macro/src/: lib.rs
toast-rt/: Cargo.toml  std.d.ts  std.ts
toast-rt/src/structure/: any.rs  mod.rs  string.rs  symbol.rs
toast-rt/src/structure/object/: dynobject.rs  mod.rs  proto_tree.rs
