[package]
name = "rusty-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecmascript = {version="0.231", features=["parser", "dep_graph", "transforms", "optimization", "visit", "codegen", "typescript"]}
swc_common = "*"
swc_atoms = "*"
swc_bundler = "0.217"

proc-macro2 = "1.0.66"

# cranelift = "0.93"
# cranelift-module = "0.93"
# cranelift-native = "0.93"
# cranelift-object = "0.93"

inkwell = {version = "0.2", features=["llvm16-0"]}
llvm-sys = "160"

clap = {version="4.1", features=["derive"]}
serde = "1.0"
toml = {version="*", features=["parse"]}
json = "*"
uuid = {version="1.3", features=["v4","fast-rng", "serde"]}

crossbeam-channel = "*"
itertools = "*"
num-traits = "*"
anyhow = "*"
# termcolor = "1.2"
indicatif = "*"
lazy_static = "*"
# reqwest = "*"
cityhasher = {version = "*", default-features = false}

unicode-id-start = "*"
peg = "0.8"

parking_lot = "*"
# tokio = {version="1.28", features=["full"]}
# async-recursion = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"