[package]
name = "native-ts-hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-js-common = {path="../native-js-common"}
native-ts-parser = {path = "../native-ts-parser"}

itoa = "1"
num-traits = "*"
itertools = "*"

swc_ecmascript = {version="0.231", features=["parser", "dep_graph", "transforms", "optimization", "visit", "codegen", "typescript"]}
swc_common = "*"
swc_atoms = "*"