[package]
name = "native-ts-hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
native-ts-parser = {path = "../native-ts-parser"}

itoa = "1"
num-traits = "*"
itertools = "*"
parking_lot = "*"