[package]
name = "native-ts-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.8"

log = "0.4"
toml = "^0.8"
serde = "^1.0"


[dependencies.swc_core]
version = "0.90"
features = ["common", "common_sourcemap", "ecma_visit", "ecma_transforms", "ecma_transforms_optimization", "ecma_transforms_module", "ecma_quote", "ecma_ast", "ecma_parser", "ecma_parser_typescript", "ecma_codegen"]
