[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'

[dependencies]
libobject = {version= "*", path="../libobject"}
atoi = "*"
lazy_static = "*"
parking_lot = "*"
num-bigint = "*"

lazy_thread_local = "0.1.1"


libc = "*"
unwinding = {version = "0.2", default-features=false, features=["unwinder"]}
gimli = { version = "0.26.1", default-features = false, features = ["read-core"] }

[build-dependencies]
cc = "1.0"