[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
rusty-ts-macro = {version="*", path="../rusty-ts-macro"}

atoi = "*"
hashbrown = {version = "*", default-features = false}
cityhasher = {version = "*", default-features = false}
lazy_static = "*"
parking_lot = "*"
num-bigint = "*"

corosensei = "0.1.4"
minicoroutine = "0.1.3"

regress = {version ="0.7", default-features=false }

libc = "*"
unwinding = {version = "0.2", default-features=false, features=["unwinder", "dwarf-expr", "hide-trace"]}
gimli = { version = "0.26.1", default-features = false, features = ["read-core"] }

iron-gc = {path = "../iron-gc"}


native-js-common = {version = "*", path = "../native-js-common"}

[build-dependencies]
cc = "1.0"